--- a/css/layout/destaque.less
+++ b/css/layout/destaque.less
@@ -30,7 +30,7 @@
   padding: .6em;
   font-size: 1.2em;
   .borders-arr(2em);
-  .default-shadow;
+  &:extend(.default-shadow);
   font-weight: bold;
 }
   
