--- a/css/layout/header.less
+++ b/css/layout/header.less
@@ -5,10 +5,18 @@ header {
     height: 90px;
     width: 100%;
     position: absolute;
+
+    @media @mobile {
+        height: auto;
+    }
 }
   
 header .container {
     position: relative;
+
+    @media @mobile {
+        position: static;
+    }
 }
   
 .menu-principal{
@@ -25,6 +33,10 @@ header .container {
     li {
         display: inline-block;
         width: 5em;
+
+        @media @mobile {
+			margin: .4em;
+		}
     }
   
     a {
