--- a/css/layout/planos.less
+++ b/css/layout/planos.less
@@ -63,7 +63,7 @@
     height: 38px;
     font-size: 1.2em;
     .borders-arr;
-    .default-shadow;
+    &:extend(.default-shadow);
     margin-left: 2em;
 }
   
