operações matemáticas + refatorações

--- a/css/layout/destaque.less
+++ b/css/layout/destaque.less
@@ -6,38 +6,53 @@
   color: white;
   height: 330px;
   padding-top: 10em;
+
+  @media @mobile {
+		font-size: 14px;
+		height: 250px;
+  }
+
+  button {
+    margin-top: 1em;
+    background: @cor-padrao;
+    border: 0;
+    padding: .6em;
+    font-size: 1.2em;
+    .borders-arr(2em);
+    &:extend(.default-shadow);
+    font-weight: bold;
+
+    &:hover {
+      background: lighten(@cor-padrao, 5);
+    }
+
+    &:active {
+      background: darken(@cor-padrao, 5);
+    }  
+  }
+  
+  p {
+    width: 30em;
+
+    &:first-child {
+      width: 30em;
+      font-size: 1.3em;
+      line-height: 1.1;
+
+      &:first-line {
+        font-size: 2.2em;
+        font-weight: bold;
+      }
+    }
+  }
 }
   
-.destaque p {
-  width: 30em;
-}
+
   
-.destaque p:first-child {
-  width: 30em;
-  font-size: 1.3em;
-  line-height: 1.1;
-}
+
   
-.destaque p:first-child:first-line {
-  font-size: 2.2em;
-  font-weight: bold;
-}
+
   
-.destaque button {
-  margin-top: 1em;
-  background: @cor-padrao;
-  border: 0;
-  padding: .6em;
-  font-size: 1.2em;
-  .borders-arr(2em);
-  &:extend(.default-shadow);
-  font-weight: bold;
-}
+
   
-.destaque button:hover {
-  background: lighten(@cor-padrao, 5);
-}
-  
-.destaque button:active {
-  background: darken(@cor-padrao, 5);
-}  
+
