--- a/css/estilos.css
+++ b/css/estilos.css
@@ -375,6 +375,11 @@ body {
   width: 940px;
   margin: 0 auto;
 }
+@media (max-width: 980px) {
+  .container {
+    width: 90%;
+  }
+}
 .titulo-secao {
   text-decoration: underline;
   font-size: 2em;
@@ -417,6 +422,13 @@ header .container {
   font-size: 1.2em;
   font-weight: lighter;
 }
+@media (max-width: 980px) {
+  .menu-principal {
+    position: static;
+    display: block;
+    text-align: center;
+  }
+}
 .menu-principal ul {
   padding-left: 0;
 }
@@ -445,17 +457,11 @@ header .container {
   height: 330px;
   padding-top: 10em;
 }
-.destaque p {
-  width: 30em;
-}
-.destaque p:first-child {
-  width: 30em;
-  font-size: 1.3em;
-  line-height: 1.1;
-}
-.destaque p:first-child:first-line {
-  font-size: 2.2em;
-  font-weight: bold;
+@media (max-width: 980px) {
+  .destaque {
+    font-size: 14px;
+    height: 250px;
+  }
 }
 .destaque button {
   margin-top: 1em;
@@ -472,6 +478,18 @@ header .container {
 }
 .destaque button:active {
   background: #b6413e;
+}
+.destaque p {
+  width: 30em;
+}
+.destaque p:first-child {
+  width: 30em;
+  font-size: 1.3em;
+  line-height: 1.1;
+}
+.destaque p:first-child:first-line {
+  font-size: 2.2em;
+  font-weight: bold;
 }
 /** Sobre **/
 .sobre {
@@ -683,8 +701,8 @@ footer::before {
   z-index: -1;
 }
 footer .container {
-  padding-top: 3em;
-  height: 6.5em;
+  padding-top: 48px;
+  height: 104px;
   position: relative;
 }
 footer .container img {
@@ -740,9 +758,6 @@ footer a {
   background-image: url(../imagens/instagram.png);
 }
 @media (max-width: 980px) {
-  .container {
-    width: 90%;
-  }
   header h1 {
     max-width: 50%;
     margin: 0 auto;
@@ -751,15 +766,6 @@ footer a {
     max-width: 100%;
     margin: .5em auto;
     display: block;
-  }
-  .menu-principal {
-    position: static;
-    display: block;
-    text-align: center;
-  }
-  .destaque {
-    font-size: 14px;
-    height: 250px;
   }
   .menu-principal,
   .menu-principal li,
