--- a/css/layout/footer.less
+++ b/css/layout/footer.less
@@ -2,41 +2,41 @@
 footer {
     display: block;
     position: relative;
-}
   
-footer::after {
-    content: "";
-    background: url(../imagens/fundo-rodape.png);
-    opacity: .02;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
-}
+    &::after {
+        content: "";
+        background: url(../imagens/fundo-rodape.png);
+        opacity: .02;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+    }
   
-footer::before {
-    content: "";
-    background: @cor-auxiliar;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
+    &::before {
+        content: "";
+        background: @cor-auxiliar;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+    }
+
+    .container {
+        padding-top: @tam-fonte-html * 3px;
+        height: @tam-fonte-html * 6.5px;
+        position: relative;
+
+        img {
+            width: 250px;
+        }
+    }
 }
-  
-footer .container {
-    padding-top: 3em;
-    height: 6.5em;
-    position: relative;
-}
-  
-footer .container img {
-    width: 250px;
-}
-  
+
 .menu-rodape,
 .social {
     position: absolute;
