--- a/css/layout/header.less
+++ b/css/layout/header.less
@@ -25,6 +25,12 @@ header .container {
     top: -.5em;
     font-size: 1.2em;
     font-weight: lighter;
+
+    @media @mobile {
+		position: static;
+		display: block;
+		text-align: center;		
+	}
   
     ul {
         padding-left: 0;
